- Add specific rendering for man_made=bridge
- Make scale / grid styleable
- Fix attribution display for new layer management
- Improve feedback on error tile sources and better WMS error handling
- Show a tip when starting GPX recording and no geoid model is installed
- Support display of links to alternative presets
- Use ui for online preset search and preset creation

15.0.3: Fix crash when checkboxes in checkgroups are selected in certain combinations, fix nonsense label display in tag form for some checkgroups, update preset.

15.0.2: Fix issue with GPX recording on Android 10, fix issue with visible state being overwritten on styleable layers, select Note properly if in an element selection mode, maintain preset order when matching, update translations, update OH fragment, update imagery.

15.0.1: Explicitly use our OkHttp client with TLS 1.2 support

15.0.0: Update imagery and translations, update privacy policy, fix issue with imagery selection on older devices, fix beeping due to under screen fingerprint sensor generating key presses, fix another race condition in the property editor.

15.0.0-6: Update translation and preset, workaround androidx issue with calling onFocusChanged listeners after View has been destroyed. 

15.0.0-5: Revert upgrade to signpost 2.0.0 as this is incompatible with pre Android 26 and will crash on signing, use Threads instead of AsyncTask for Mapillary performance improvement.

15.0.0-4: Make relation pruning more robust against race conditions.

15.0.0-3: Force create imagery lists in layer dialog as they might not exist yet.

15.0.0-2: Update translations, imagery, presets, and synonyms, fix long click in locked mode, data style name translations, prune relations when pruning, update opening hours parser and fragment, add gpx and geojson intent filter based on mime type, allow setting 0 for GPS interval and distance, fix styling of HelpViewer in dark mode, various other bug fixes.
