@@ -49,6 +49,7 @@ As github no longer supports logins with user name / password this has been remo
 * Improved performance in auto-download modes.
 * Improved imagery attribution display.
 * Colour and line width of the grid/scale display can now be styled. 
+* Beep volume can now be set in the Advanced preferences.
 
 # Upgrading from previous versions
 
