@@ -45,7 +45,9 @@
 <h3>Pending upload warning</h3>
 <p>Limit below which pending object uploads will have warning status. Default: <em>200 objects</em>.</p>
 <h3>Disable feedback activity</h3>
-<p>Disable the feedback activity and use an URL instead. Default. <em>false</em>.</p>
+<p>Disable the feedback activity and use an URL instead. Default: <em>false</em>.</p>
+<h3>Beep volume</h3>
+<p>Set how load the beep is Vespucci uses when you are pressing unsupported short cut keys on a connected real keyboard. Default: <em>50</em></p>
 <h2>Data and Editing Settings</h2>
 <p>Settings related to editing.</p>
 <h3>Always use contextual menu</h3>
