@@ -1,0 +1,40 @@
+package de.blau.android.util;
+
+import android.media.AudioManager;
+import android.media.ToneGenerator;
+import android.os.Handler;
+import android.os.Looper;
+import de.blau.android.App;
+import de.blau.android.prefs.Preferences;
+
+public final class Sound {
+
+    private static final int BEEP_DURATION = 200;
+    public static final int BEEP_DEFAULT_VOLUME   = 50;
+
+    /**
+     * Private constructor to prevent instantiation
+     */
+    private Sound() {
+        // nothing
+    }
+    
+    /**
+     * Beep
+     */
+    public static void beep() {
+        Preferences prefs = App.getLogic().getPrefs();
+        int volume = BEEP_DEFAULT_VOLUME;
+        if (prefs != null) {
+            volume = prefs.getBeepVolume();
+        }
+        ToneGenerator toneGenerator = new ToneGenerator(AudioManager.STREAM_ALARM, volume);
+        toneGenerator.startTone(ToneGenerator.TONE_CDMA_ALERT_CALL_GUARD, BEEP_DURATION);
+        Handler handler = new Handler(Looper.getMainLooper());
+        handler.postDelayed(() -> {
+            if (toneGenerator != null) {
+                toneGenerator.release();
+            }
+        }, BEEP_DURATION + 50L);
+    }
+}
