@@ -981,7 +981,10 @@ avoided by using an offline data source.</string>
     <string name="config_dataWarn_summary">Limit (in number of Nodes) at which we start warning about too much data being loaded</string>
     <string name="config_useUrlForFeedback_title">Disable feedback activity</string>
     <string name="config_useUrlForFeedback_summary">Disable the feedback activity and use an URL instead.</string>
-  
+    <string name="config_beepVolume_title">Beep volume</string>
+    <string name="config_beepVolume_summary">Volume setting for beeps.</string>
+    <string name="config_beepVolume_current">%1$d</string>
+    
     <!-- Data and Editing Settings -->
     <string name="config_category_editing">Data and edit settings</string>
     <string name="config_category_editing_summary">Auto-download, saving and notification settings.</string>
