@@ -157,6 +157,18 @@
             android:key="@string/config_useUrlForFeedback_key"
             android:summary="@string/config_useUrlForFeedback_summary"
             android:title="@string/config_useUrlForFeedback_title" />
+        <ch.poole.android.numberpickerpreference.NumberPickerPreference
+            android:defaultValue="50"
+            android:dialogTitle="@string/config_beepVolume_title"
+            android:key="@string/config_beepVolume_key"
+            android:numeric="integer"
+            android:summary="@string/config_beepVolume_summary"
+            android:title="@string/config_beepVolume_title"
+            app:spt_maxValue="100"
+            app:spt_minValue="0"
+            app:spt_increment="1"
+            app:spt_currentValueText="@string/config_beepVolume_current"
+            app:spt_setWrapSelectorWheel="false" />
     </androidx.preference.PreferenceScreen>
     <androidx.preference.PreferenceScreen
         android:key="config_category_editing"
